--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <nav class="fixed-top navtop d-sm-flex align-items-center
                 justify-content-center text-center d-none p-2 mx-auto" style="margin: auto;">
             <div class="d-flex align-items-center col-6">
-                <img class="align-middle me-3" src="./assets/img/zlglogo.png" alt="" style="width:
-                        250px;">
+                <a href="https://danielhenderson17.com/zombielynx/"><img class="align-middle me-3" src="./assets/img/zlglogo.png" alt="" style="width:
+                    250px;"></a>
                 <ul class="nav justify-content-around fs-3" style="font-family: 'Kanit', sans-serif;">
                     <li class="mx-3">
                         <a href="https://danielhenderson17.com/ark/" class="nav-link
