--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                             Empyrion
                         </a>
                     </li>
+                    <li class="mx-3">
+                        <a href="https://danielhenderson17.com/valheim" class="nav-link scrollto
+                                text-white p-0">
+                            Valheim
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="col-2 d-flex align-items justify-content-end">
@@ -114,6 +120,13 @@
                             scrollto
                             text-white p-0">
                         Empyrion
+                    </a>
+                </li>
+                <li class="mx-3">
+                    <a href="https://danielhenderson17.com/valheim" class="nav-link
+                            scrollto
+                            text-white p-0">
+                        Valheim
                     </a>
                 </li>
                 <li class="mx-3">
