--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 </head>
 
 <body style="font-family: 'Kanit', sans-serif;">
-    <!-- Desktop -->
     <div>
         <!-- Navigation Top -->
         <nav class="fixed-top navtop d-sm-flex align-items-center
@@ -92,48 +91,13 @@
     <!-- Mobile -->
     <div class="col-sm-11 col-md-11 col-lg-10 col-xl-10 mx-auto me-0 p-0">
         <!-- Navigation Bottom -->
-        <nav class="fixed-bottom navbot d-block d-sm-none pb-2" style="margin: auto;">
-            <ul class="nav justify-content-around fs-6 pt-2 pb-3" style="font-family: 'Kanit', sans-serif;">
-                <li class="mx-3">
-                    <a href="https://danielhenderson17.com/ark" class="nav-link
-                            scrollto
-                            text-white p-0">
-                        Ark
-                    </a>
-                </li>
-                <li class="mx-3">
-                    <a href="https://danielhenderson17.com/minecraft" class="nav-link scrollto text-center
-                            text-white p-0">
-                        Minecraft
-                    </a>
-                </li>
-                <li class="mx-3">
-                    <a href="https://danielhenderson17.com/eco" class="nav-link
-                            scrollto
-                            text-center
-                            text-white p-0">
-                        Eco
-                    </a>
-                </li>
-                <li class="mx-3">
-                    <a href="https://danielhenderson17.com/empyrion" class="nav-link
-                            scrollto
-                            text-white p-0">
-                        Empyrion
-                    </a>
-                </li>
-                <li class="mx-3">
-                    <a href="https://danielhenderson17.com/valheim" class="nav-link
-                            scrollto
-                            text-white p-0">
-                        Valheim
-                    </a>
-                </li>
-                <li class="mx-3">
-                    <a href="https://discord.gg/FrWtShumut" class="nav-link scrollto
-                            text-white p-0"><i class="bi bi-discord"></i></a>
-                </li>
-            </ul>
+        <nav class="fixed-bottom navbot d-flex justify-content-around mx-auto d-sm-none pt-2 pb-3" style="margin: auto;">
+            <a class="mx-auto text-center" href="https://danielhenderson17.com/ark/">Ark</a>
+            <a class="mx-auto text-center" href="https://danielhenderson17.com/minecraft/">Minecraft</a>
+            <a class="mx-auto text-center" href="https://danielhenderson17.com/eco/">Eco</a>
+            <a class="mx-auto text-center" href="https://danielhenderson17.com/empyrion/">Empyrion</a>
+            <a class="mx-auto text-center" href="https://danielhenderson17.com/valheim/">Valheim</a>
+            <a href="https://discord.gg/FrWtShumut" class="text-center mx-auto text-white p-0"><i class=" w-50 bi bi-discord"></i></a>
         </nav>
     </div>
     <!-- Body -->
